<!--
  ~ Copyright 2024 Mark Fairchild.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Irregular Scheduler</string>
    <!-- Strings used for fragments for navigation -->
    <string name="entry_fragment_label">Scheduler</string>
    <string name="review_fragment_label">Review</string>
    <string name="button_submit">Generate Schedule</string>
    <string name="review_goBack">Previous</string>

    <string name="label_schedule_code">Enter schedule:</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="schedule_code_hint">Example:\nm9&#8211;5 w15:30&#8211;940 r8am&#8211;8pm\nf10am su8&#8211;8</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="settings_main_header">REQUIRED</string>
    <string name="settings_optional_header">OPTIONAL</string>
    <string name="settings_advanced_header">ADVANCED</string>
    <string name="settings_behaviour_header">DEFAULTS</string>

    <!-- Messages Preferences -->
    <string name="setting_assume_daytime_title">Assume it\'s daytime?</string>

    <string name="button_generate">Generate Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_fragment_label">Submit</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="about_fragment_label">About</string>
    <string name="review_label">Review the generated schedule and make sure there are no mistakes.</string>
    <string name="review_submit">Submit</string>
    <string name="setting_event_name_title">Choose a title!</string>
    <string name="setting_event_description_title">Description</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="setting_assume_daytime">assumeDaytime</string>
    <string name="setting_selected_account">changeAccount</string>
    <string name="setting_default_duration">defaultDuration</string>
    <string name="setting_event_description">eventDesc</string>
    <string name="setting_event_name">eventName</string>
    <string name="setting_assume_daytime_summary">If checked the scheduler will assume that ambiguous times refer to daytime. If you don\'t want this, use 24h times or remember to include am/pm.</string>
    <string name="setting_default_duration_title">How long are your events usually?</string>
    <string name="setting_address">address</string>
    <string name="setting_address_title">Address</string>
    <string name="setting_selected_account_title">What account?</string>
    <string name="setting_selected_calendar_title">Which calendar?</string>
    <string name="setting_selected_calendar">calendarID</string>
    <string name="msg_schedule_error">incorrect schedule format</string>
    <string name="setting_schedule_code">setting_schedule_code</string>
    <string name="confirm_title">Confirmation</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="setting_colour">setting_colour</string>
    <string name="setting_colour_title">Choose a colour!</string>
    <string name="title_activity_about">About</string>
    <string name="setting_default_duration_summary">The default duration for events when no ending time is specified.\nCurrently: %s hours</string>
    <string name="settings_colour_summary">The colour that will be used for the calendar events.\nCurrently: %s</string>
    <string name="errorMessage_notSignedIn">(not signed in)</string>
    <string name="defaultCalendarDisplay">(default)</string>
    <string name="message_loadingPrivacy">Loading privacy policy&#8230;</string>
</resources>