<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 Mark Fairchild.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_label_schedule_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_schedule_code"
                />

            <EditText
                android:id="@+id/edittext_schedule_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:maxLines="4"
                android:inputType="textNoSuggestions"
                android:autoSizeMinTextSize="4sp"
                android:autofillHints="false"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:hint="@string/schedule_code_hint"
                ><requestFocus /></EditText>

            <Spinner
                android:id="@+id/slider_date_offset"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:entries="@array/date_offset_entries"
                />

            <Space
                android:layout_width="20sp"
                android:layout_height="20sp" />

            <TextView
                android:id="@+id/textview_schedule_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minLines="6"
                />

            <Button
                android:id="@+id/button_generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_generate"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:enabled="false"
                />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>